# seismic-source-classification

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: tomasov_baseline.yaml
data/: README.md
notebooks/: 01_explore_tomasov.ipynb
src/: config.py  model.py  train.py
src/data/: dataset.py  preprocessing.py
src/training/: evaluate.py
src/utils/: config.py
