[tool.poetry]
name = "seismic-source-classification"
version = "0.1.0"
description = "Master thesis: Develop ML models to classify seismic events in DAS data, focusing on avalanche detection in northern Norway."
authors = ["Marco Coutinho <your@email.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
jupyter = "^1.0"
scikit-learn = "^1.4"
pywavelets = "^1.4"
matplotlib = "^3.8"
torch = "^2.2"
librosa = "^0.11.0"
scipy = "^1.15.3"
soundfile = "^0.13.1"
ipywidgets = "^8.1.7"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
pandas = "^2.3.0"
h5py = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
